--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>FRC 6956: Home Page</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="stylesheet" type="text/css" href="./main.css">
+		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
 
