--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-
-  </body>
+		<nav class="navbar navbar-light bg-light">
+			<a class="navbar-brand" href="Index">Navbar</a>
+		</nav>
+	</body>
 </html>
