--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-light bg-light">
-			<a class="navbar-brand" href="Index">Navbar</a>
+			<a class="btn btn-primary" href="Index">Sham-Rock-Botics</a>
 		</nav>
 	</body>
 </html>
