--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-light bg-light">
+		<nav class="navbar bg-dark">
 			<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
 		</nav>
 	</body>
