--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,40 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+		<script src="jquery-3.4.1.min.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="./main.css">
+		<script>
+			$("#Sponsors").load("Sponsors.html");
+		</script>
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-		<nav class="navbar bg-dark">
-			<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
+		<nav id="IndBody" class="navbar justify-content-center">
+				<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
+				<a class="btn btn-primary" href="Index" role="Button">About</a>
+				<a class="btn btn-primary" href="Index" role="Button">FLL Jr.</a>
+				<a class="btn btn-primary" href="#Sponsors" role="Button">Sponsors</a>
 		</nav>
+		<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<div id=Sponsors>
+		</div>
 	</body>
 </html>
