--- a/Index.html
+++ b/Index.html
@@ -7,19 +7,17 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<script>
-			$("#Sponsors").load("Sponsors.html");
+			$("#navInd").load("PageNavbar.html");
+			$("#Sponsor").load("Sponsors.html");
 		</script>
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-		<div id=Sponsors>
+		<div id="navInd"></div>
+		
+		<div id=Sponsor>
 		</div>
-		<nav id="IndBody" class="navbar justify-content-center">
-				<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
-				<a class="btn btn-primary" href="Index" role="Button">About</a>
-				<a class="btn btn-primary" href="Index" role="Button">FLL Jr.</a>
-				<a class="btn btn-primary" href="#Sponsors" role="Button">Sponsors</a>
-		</nav>
+		
 		<br>
 				<br>
 				<br>
