--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,10 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<script>
-			$("#navInd").load("PageNavbar.html");
-			$("#Sponsor").load("Sponsors.html");
+			$(Document).ready(function() {
+				$("#navInd").load("PageNavbar.html");
+				$("#Sponsor").load("Sponsors.html");
+			});
 		</script>
 		<title>FRC 6956: Home Page</title>
 	</head>
