--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,19 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.2/flexslider.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.2/jquery.flexslider.js"></script>
 		<script src="jquery-3.4.1.min.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<script>
 			$(Document).ready(function() {
+				$("#sliderInd").load("Slider.html");
 				$("#navInd").load("PageNavbar.html");
 				$("#Sponsor").load("Sponsors.html");
 			});
@@ -15,11 +22,11 @@
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-		<div id="navInd"></div>
-		
-		<div id=Sponsor>
+		<div id = "sliderInd">
+			<div id="navInd"></div>
 		</div>
-		
+			<div id=Sponsor></div>
+
 		<br>
 				<br>
 				<br>
