--- a/Slider.html
+++ b/Slider.html
@@ -9,7 +9,7 @@
            <section class="flexslider-wrapper">
               <div id="main-slider" class="flexslider" data-transition="fade" data-page-class="slider-full-width">
                  <div class="slides">
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="https://www.solodev.com/assets/flexslider/slide1.jpg">
+                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage1.png">
                        <div class="slide-caption">
                           <div class="row">
                              <div class="col-md-12">
@@ -21,7 +21,7 @@
                           </div>
                        </div>
                     </div>
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="https://www.solodev.com/assets/flexslider/slide2.jpg">
+                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage2.png">
                        <div class="slide-caption">
                           <div class="row">
                              <div class="col-md-12">
@@ -33,7 +33,7 @@
                           </div>
                        </div>
                     </div>
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="https://www.solodev.com/assets/flexslider/slide3.jpg">
+                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage3.png">
                        <div class="slide-caption">
                           <div class="row">
                              <div class="col-md-12">
