--- a/Slider.html
+++ b/Slider.html
@@ -3,53 +3,65 @@
   <head>
   </head>
   <body>
-  <div class="container slider-container">
-     <div class="row">
-        <div class="col-md-12 slider-left">
-           <section class="flexslider-wrapper">
-              <div id="main-slider" class="flexslider" data-transition="fade" data-page-class="slider-full-width">
-                 <div class="slides">
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage1.png">
-                       <div class="slide-caption">
-                          <div class="row">
-                             <div class="col-md-12">
-                                <div class="slide-text">
-                                   <div class="slide-title">This is Slide #1</div>
-                                   This is text for the first slide.
-                                </div>
-                             </div>
-                          </div>
-                       </div>
-                    </div>
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage2.png">
-                       <div class="slide-caption">
-                          <div class="row">
-                             <div class="col-md-12">
-                                <div class="slide-text">
-                                   <div class="slide-title">This is Slide #2</div>
-                                   This is text for the second slide.
-                                </div>
-                             </div>
-                          </div>
-                       </div>
-                    </div>
-                    <div data-slide-alt="alt" data-slide-bg-stretch=true class="slide slide-bg" data-slide-bg="./img/targetImage3.png">
-                       <div class="slide-caption">
-                          <div class="row">
-                             <div class="col-md-12">
-                                <div class="slide-text">
-                                   <div class="slide-title">This is Slide #3</div>
-                                   This is text for the third slide.
-                                </div>
-                             </div>
-                          </div>
-                       </div>
-                    </div>
-                 </div>
-           </section>
-           </div>
-        </div>
+ <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+
+   <ol class="carousel-indicators">
+     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+     <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+   </ol>
+ 					<!-- clean up code -->
+   <div class="carousel-inner">
+ 	<div class="carousel-item active">
+ 		<img src="./Star  Destroyer.jpg" class="d-block w-100" alt="...">
+ 		<div class="carousel-caption d-none d-md-block">
+ 			<h3>The Star Destroyer</h3>
+ 			<p>.</p>
+ 	  </div>
+ 	</div>
+
+ 	<div class="carousel-item">
+       <img src="https://i.imgur.com/S8DS6i0.jpg" class="d-block w-100" alt="...">
+       <div class="carousel-caption d-none d-md-block">
+         <h3>Millennium Falcon</h3>
+         <p>.</p>
+
+       </div>
+
      </div>
+
+     <div class="carousel-item">
+       <img src="./Kylo Ren.jpg" class="d-block w-100" alt="...">
+       <div class="carousel-caption d-none d-md-block">
+         <h5>Kylo Ren</h5>
+         <p>.</p>
+
+       </div>
+
+     </div>
+
+     <div class="carousel-item">
+       <img src="./BB-8.jpg" class="d-block w-100" alt="...">
+       <div class="carousel-caption d-none d-md-block" >
+         <h5>BB-8 and D-O</h5>
+         <p>.</p>
+
+       </div>
+
+     </div>
+
+   </div>
+
+   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+   </a>
+
 </div>
   </body>
 </html>
