--- a/Slider.html
+++ b/Slider.html
@@ -20,39 +20,42 @@
  			<p>.</p>
  	  </div>
  	</div>
-
  	<div class="carousel-item">
-       <img src="https://i.imgur.com/S8DS6i0.jpg" class="d-block w-100" alt="...">
+       <img src="./img/Prototyping.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block">
          <h3>Millennium Falcon</h3>
          <p>.</p>
-
        </div>
-
-     </div>
-
-     <div class="carousel-item">
-       <img src="./Kylo Ren.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+       <img src="./img/Sawing.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block">
          <h5>Kylo Ren</h5>
          <p>.</p>
-
        </div>
-
-     </div>
-
-     <div class="carousel-item">
-       <img src="./BB-8.jpg" class="d-block w-100" alt="...">
+    </div>
+   	<div class="carousel-item">
+       <img src="./img/ShopChat.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block" >
          <h5>BB-8 and D-O</h5>
          <p>.</p>
-
        </div>
-
-     </div>
-
-   </div>
-
+    </div>
+    <div class="carousel-item">
+		<img src="./img/Showcase.jpg" class="d-block w-100" alt="...">
+		<div class="carousel-caption d-none d-md-block" >
+			<h5>BB-8 and D-O</h5>
+	    	<p>.</p>
+		</div>
+	</div>
+    <div class="carousel-item">
+		<img src="./img/ShopDemo.jpg" class="d-block w-100" alt="...">
+	    <div class="carousel-caption d-none d-md-block" >
+	    	<h5>BB-8 and D-O</h5>
+	        <p>.</p>
+		</div>
+	</div>
+ </div>
    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
      <span class="sr-only">Previous</span>
@@ -61,7 +64,6 @@
      <span class="carousel-control-next-icon" aria-hidden="true"></span>
      <span class="sr-only">Next</span>
    </a>
-
 </div>
   </body>
 </html>
