--- a/Slider.html
+++ b/Slider.html
@@ -10,6 +10,7 @@
      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
      <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+     <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
    </ol>
  					<!-- clean up code -->
    <div class="carousel-inner">
