--- a/Slider.html
+++ b/Slider.html
@@ -17,36 +17,36 @@
  	<div class="carousel-item active">
        <img src="./img/Prototyping.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block">
-         <h3>Millennium Falcon</h3>
-         <p>.</p>
+         <h3>Wood is ok for prototypes</h3>
+         <p>You guys are getting there</p>
        </div>
     </div>
     <div class="carousel-item">
        <img src="./img/Sawing.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block">
-         <h5>Kylo Ren</h5>
-         <p>.</p>
+         <h5>Don't cut your hand</h5>
+         <p>I believe in you!!!</p>
        </div>
     </div>
    	<div class="carousel-item">
        <img src="./img/ShopChat.jpg" class="d-block w-100" alt="...">
        <div class="carousel-caption d-none d-md-block" >
-         <h5>BB-8 and D-O</h5>
-         <p>.</p>
+         <h5>This is some hard work</h5>
+         <p>I applaud you guys</p>
        </div>
     </div>
     <div class="carousel-item">
 		<img src="./img/Showcase.jpg" class="d-block w-100" alt="...">
 		<div class="carousel-caption d-none d-md-block" >
-			<h5>BB-8 and D-O</h5>
-	    	<p>.</p>
+			<h5>What a great showcase this year</h5>
+	    	<p>Great job team!!!!</p>
 		</div>
 	</div>
     <div class="carousel-item">
 		<img src="./img/ShopDemo.jpg" class="d-block w-100" alt="...">
 	    <div class="carousel-caption d-none d-md-block" >
-	    	<h5>BB-8 and D-O</h5>
-	        <p>.</p>
+	    	<h5>Shop Demo</h5>
+	        <p>testing things!!!</p>
 		</div>
 	</div>
  </div>
