--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 		<title>FRC 6956: Home Page</title>
 	</head>
 	<body>
-		<div id="navInd"></div>
+		<div id="navInd" class="posk"></div>
 		<div id = "sliderInd"></div>
-			<div id=Sponsor></div>
+
 
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<div id="Sponsor"></div>
 	</body>
 </html>
