--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<script>
 			$(Document).ready(function() {
+				$("#breaks").load("break.htm");
 				$("#sliderInd").load("Slider.html");
 				$("#navInd").load("PageNavbar.html");
 				$("#Sponsor").load("Sponsors.html");
@@ -23,10 +24,9 @@
 	</head>
 	<body>
 		<div id="navInd" class="posk"></div>
+		<div id = "breaks"></div>
 		<div id = "sliderInd"></div>
-
-
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<div id = "breaks"></div>
 		<div id="Sponsor"></div>
 	</body>
 </html>
