--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="./main.css">
 		<script>
 			$(Document).ready(function() {
-				$("#breaks").load("break.htm");
+				$("#breaks").load("break.html");
 				$("#sliderInd").load("Slider.html");
 				$("#navInd").load("PageNavbar.html");
 				$("#Sponsor").load("Sponsors.html");
