--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <nav class="navbar justify-content-center">
+    <nav class="navbar justify-content-center custom-color">
 				<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
 				<a class="btn btn-primary" href="Index" role="Button">About</a>
 				<a class="btn btn-primary" href="Index" role="Button">FLL Jr.</a>
