--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -4,10 +4,10 @@
   </head>
   <body>
     <nav class="navbar justify-content-center custom-color">
-				<a class="btn btn-primary" href="Index" role="Button">Sham-Rock-Botics</a>
-				<a class="btn btn-primary" href="Index" role="Button">About</a>
-				<a class="btn btn-primary" href="Index" role="Button">FLL Jr.</a>
-				<a class="btn btn-primary" href="#Sponsors" role="Button">Sponsors</a>
+				<a class="btn btn-primary btn-lg" href="Index" role="Button">Sham-Rock-Botics</a>
+				<a class="btn btn-primary btn-lg" href="Index" role="Button">About</a>
+				<a class="btn btn-primary btn-lg" href="Index" role="Button">FLL Jr.</a>
+				<a class="btn btn-primary btn-lg" href="#Sponsors" role="Button">Sponsor</a>
 		</nav>
   </body>
 </html>
