Introducing new Navbar

--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -3,11 +3,19 @@
   <head>
   </head>
   <body>
-    <nav class="navbar justify-content-center custom-color">
-				<a class="btn btn-primary btn-lg" href="Index" role="Button">Sham-Rock-Botics</a>
-				<a class="btn btn-primary btn-lg" href="Index" role="Button">About</a>
-				<a class="btn btn-primary btn-lg" href="Index" role="Button">FLL Jr.</a>
-				<a class="btn btn-primary btn-lg" href="#Sponsors" role="Button">Sponsor</a>
+    <div class="container">
+		<img src="images/logo1.png" class="logo">
+		<nav>
+	    	<ul>
+	        	<li><a href="Index">Home</a></li>
+	            <li><a href="#About">About</a></li>
+	            <li><a href="#Sponsors">Partners</a></li>
+	            <li><a href="Index">Blog</a></li>
+	            <li><a href="Index">Calender</a></li>
+	            <li><a href="Index">FIRST Lego League Jr.</a></li>
+	            <li><a href="Index">Danny's Coaches Corner</a></li>
+			</ul>
 		</nav>
+	</div>
   </body>
 </html>
