--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -1,10 +1,8 @@
 <!DOCTYPE>
 <html>
   <head>
-  </head>
-  <body>
     <div class="container">
-		<img src="images/logo1.png" class="logo">
+		<img src="img/logo1.png" class="logo">
 		<nav>
 	    	<ul>
 	        	<li><a href="Index">Home</a></li>
@@ -17,5 +15,7 @@
 			</ul>
 		</nav>
 	</div>
+  </head>
+  <body>
   </body>
 </html>
