--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.2/jquery.flexslider.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<link rel="stylesheet" type="text/css" href="./main.css">
+		<link rel="stylesheet" type="text/css" href="./Styles/main.css">
+		<link rel="stylesheet" type="text/css" href="./Styles/nav.css">
+		<link rel="stylesheet" type="text/css" href="./Styles/footer.css">
 		<script>
 			$(new Document).ready(function() {
 				$("#breaks").load("break.html");
@@ -20,9 +22,9 @@
 			});
 		</script>
 		<title>FRC 6956: Home Page</title>
+		<div id="navInd"></div>
 	</head>
 	<body>
-		<div id="navInd" class="posk"></div>
 		<div id = "sliderInd"></div>
 		<div id = "breaks"></div>
 		<div id = "breaks"></div>
