--- a/Footer.html
+++ b/Footer.html
@@ -17,3 +17,4 @@
   		  <a href="https://lgbtqoffirst.wordpress.com/" target="_blank"><img class="rainbow-icon"
   		      src="./icons/glyphicons-wordpress.png"></img></a>
   		</footer>
+</html>
