--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				$("#breaks").load("break.html");
 				$("#sliderInd").load("Slider.html");
 				$("#navInd").load("PageNavbar.html");
+				$("#abt").load("About.html");
 				$("#Sponsor").load("Sponsors.html");
+				$("#ft").load("Footer.html");
 			});
 		</script>
 		<title>FRC 6956: Home Page</title>
@@ -27,7 +29,11 @@
 	<body>
 		<div id = "sliderInd"></div>
 		<div id = "breaks"></div>
+		<div id = "abt"></div>
 		<div id = "breaks"></div>
 		<div id="Sponsor"></div>
 	</body>
+	<footer>
+		<div id = "ft"> </div>
+	</footer>
 </html>
