header and footer placement

--- a/Footer.html
+++ b/Footer.html
@@ -17,4 +17,5 @@
   		  <a href="https://lgbtqoffirst.wordpress.com/" target="_blank"><img class="rainbow-icon"
   		      src="./icons/glyphicons-wordpress.png"></img></a>
   		</footer>
+  	</body>
 </html>
