--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -1,21 +1,23 @@
 <!DOCTYPE>
 <html>
   <head>
-    <div class="container">
-		<img src="img/logo1.png" class="logo">
-		<nav>
-	    	<ul>
-	        	<li><a href="Index">Home</a></li>
-	            <li><a href="#About">About</a></li>
-	            <li><a href="#Sponsors">Partners</a></li>
-	            <li><a href="Index">Blog</a></li>
-	            <li><a href="Index">Calender</a></li>
-	            <li><a href="Index">FIRST Lego League Jr.</a></li>
-	            <li><a href="Index">Danny's Coaches Corner</a></li>
-			</ul>
-		</nav>
-	</div>
   </head>
   <body>
+  	<header>
+  	  <div class="container">
+			<img src="images/logo1.png" class="logo">
+			<nav>
+		    	<ul>
+		        	<li><a href="Index">Home</a></li>
+		            <li><a href="#About">About</a></li>
+		            <li><a href="#Sponsors">Partners</a></li>
+		            <li><a href="Index">Blog</a></li>
+		            <li><a href="Index">Calender</a></li>
+		            <li><a href="Index">FIRST Lego League Jr.</a></li>
+		            <li><a href="Index">Danny's Coaches Corner</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
   </body>
 </html>
