--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -5,7 +5,7 @@
   <body>
   	<header>
   	  <div class="container">
-			<img src="img/TeamLogo.png" class="logo">
+			<img src="img/teamLogo.png" class="logo">
 			<nav>
 		    	<ul>
 		        	<li><a href="Index">Home</a></li>
