--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -4,10 +4,10 @@
   </head>
   <body>
   	<header>
-  	  <div class="container">
-			<img src="img/teamLogo.png" class="logo">
+  	  <div class="container navbar-fixed-top">
 			<nav>
 		    	<ul>
+		    	    <li><img src="img/teamLogo.png" class="logo" href="index.html"></li>
 		            <li><a href="#About">About</a></li>
 		            <li><a href="#Sponsors">Partners</a></li>
 		            <li><a href="Index">Blog</a></li>
