--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -4,7 +4,7 @@
   </head>
   <body>
   	<header>
-  	  <div class="container navbar-fixed-top">
+  	  <div class="container">
 			<nav>
 		    	<ul>
 		    	    <li><img src="img/teamLogo.png" class="logo" href="index.html"></li>
