--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -5,15 +5,20 @@
   <body>
   	<header>
   	  <div class="container">
-			<nav>
-		    	<ul>
-		    	    <li><img src="img/teamLogo.png" class="logo" href="index.html"></li>
-		            <li><a href="#About">About</a></li>
-		            <li><a href="#Sponsors">Partners</a></li>
-		            <li><a href="Index">Blog</a></li>
-		            <li><a href="Index">Calender</a></li>
-		            <li><a href="Index">Danny's Coaches Corner</a></li>
-				</ul>
+		<nav class="navbar">
+		  <a href="index"><img src="img/teamLogo.png" class="logo" href="index.html"></a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  	<span class="navbar-toggler-icon"></span>
+		  </button>
+			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    	<ul class="navbar-nav mr-auto">
+			    		<li><a href="#About">About</a></li>
+						<li><a href="#Sponsors">Partners</a></li>
+						<li><a href="index">Blog</a></li>
+						<li><a href="index">Calender</a></li>
+			     		<li><a href="index">Danny's Coaches Corner</a></li>
+			    	</ul>
+				</div>
 			</nav>
 		</div>
 	</header>
