--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -5,7 +5,7 @@
   <body>
   	<header>
   	  <div class="container">
-		<nav class="navbar">
+		<nav class="navbar navbar-expand-lg">
 		  <a href="index"><img src="img/teamLogo.png"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  	<span class="navbar-toggler-icon"></span>
