--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -6,11 +6,11 @@
   	<header>
   	  <div class="container">
 		<nav class="navbar navbar-expand-lg">
-		  <a href="index"><img src="img/teamLogo.png"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		  	<span class="navbar-toggler-icon"></span>
 		  </button>
 			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    	<a href="index"><img src="img/teamLogo.png" height="40px;" width="40px"></a>
 			    	<ul class="navbar-nav mr-auto">
 			    		<li class = "nav-item"><a href="#About">About</a></li>
 						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
