--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -4,21 +4,23 @@
   </head>
   <body>
   	<header>
-  		<nav class="navbar navbar-expand-md">
-		    <a href="/" class="navbar-brand"><img src="img/teamLogo.png" height="40px;" width="40px"></a>
-		    <button class="navbar-toggler coloring" type="button" data-toggle="collapse" data-target="#navbar5">
-		        <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="navbar-collapse collapse justify-content-center" id="navbar5">
-		        <ul class="navbar-nav">
-					<li class = "nav-item"><a href="#About">About</a></li>
-					<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
-					<li class = "nav-item"><a href="index">Blog</a></li>
-					<li class = "nav-item"><a href="index">Calender</a></li>
-					<li class = "nav-item"><a href="index">Danny's Coaches Corner</a></li>
-		        </ul>
-		    </div>
-		</nav>
+  	  <div class="container">
+		<nav class="navbar navbar-expand-lg">
+		  <a href="index"><img src="img/teamLogo.png" height="40px;" width="40px"></a>
+		  <button class="navbar-toggler coloring mr-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  	<span class="navbar-toggler-icon"><img src="img/teamLogo.png" height="40px;" width="40px"></span>
+		  </button>
+			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    	<ul class="navbar-nav mr-auto">
+			    		<li class = "nav-item"><a href="#About">About</a></li>
+						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
+						<li class = "nav-item"><a href="index">Blog</a></li>
+						<li class = "nav-item"><a href="index">Calender</a></li>
+			     		<li class = "nav-item"><a href="index">Danny's Coaches Corner</a></li>
+			    	</ul>
+				</div>
+			</nav>
+		</div>
 	</header>
   </body>
 </html>
