--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -1,28 +1,26 @@
 <!DOCTYPE>
 <html>
-  <head>
-  </head>
-  <body>
-  	<header>
-  	  <div class="container">
-		<nav class="navbar navbar-expand-lg">
-		  <a href="index"><img src="img/teamLogo.png" height="40px;" width="40px"></a>
-		  <button class="navbar-toggler coloring mr-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  	<span class="navbar-toggler-icon"><img src="img/teamLogo.png" height="40px;" width="40px"></span>
-		  </button>
-			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			    	<ul class="navbar-nav mr-auto">
-			    		<li class = "nav-item"><a href="#About">About</a></li>
+	<head>
+	</head>
+	<body>
+	  	<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<a class = "navbar-brand" href="index"><img src="img/teamLogo.png" height="40px;" width="40px"></a>
+        		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingnavbar">
+            		<span class="navbar-toggler-icon"></span>
+        		</button>
+        		<div class="navbar-collapse collapse justify-content-center" id="collapsingnavbar">
+					<ul class="navbar-nav nav-fill w-50">
+						<li class = "nav-item"><a href="#About">About</a></li>
 						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
 						<li class = "nav-item"><a href="index">Blog</a></li>
 						<li class = "nav-item"><a href="index">Calender</a></li>
-			     		<li class = "nav-item"><a href="index">Danny's Coaches Corner</a></li>
-			    	</ul>
+						<li class = "nav-item"><a href="index">Danny's Coaches Corner</a></li>
+					</ul>
 				</div>
 			</nav>
-		</div>
-	</header>
-  </body>
+		</header>
+	</body>
 </html>
 
 
