--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -10,7 +10,7 @@
             		<span class="navbar-toggler-icon"></span>
         		</button>
         		<div class="navbar-collapse collapse justify-content-center" id="collapsingnavbar">
-					<ul class="navbar-nav nav-fill w-50">
+					<ul class="navbar-nav nav-fill">
 						<li class = "nav-item"><a href="#About">About</a></li>
 						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
 						<li class = "nav-item"><a href="index">Blog</a></li>
