--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -9,7 +9,7 @@
         		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingnavbar">
             		<span class="navbar-toggler-icon"></span>
         		</button>
-        		<div class="navbar-collapse collapse justify-content-center" id="collapsingnavbar">
+        		<div class="navbar-collapse collapse" id="collapsingnavbar">
 					<ul class="navbar-nav nav-fill">
 						<li class = "nav-item"><a href="#About">About</a></li>
 						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
