--- a/PageNavbar.html
+++ b/PageNavbar.html
@@ -11,11 +11,11 @@
         		</button>
         		<div class="navbar-collapse collapse" id="collapsingnavbar">
 					<ul class="navbar-nav nav-fill">
-						<li class = "nav-item"><a href="#About">About</a></li>
-						<li class = "nav-item"><a href="#Sponsors">Partners</a></li>
-						<li class = "nav-item"><a href="index">Blog</a></li>
-						<li class = "nav-item"><a href="index">Calender</a></li>
-						<li class = "nav-item"><a href="index">Danny's Coaches Corner</a></li>
+						<li><a href="#About">About</a></li>
+						<li><a href="#Sponsors">Partners</a></li>
+						<li><a href="index">Blog</a></li>
+						<li><a href="index">Calender</a></li>
+						<li><a href="index">Danny's Coaches Corner</a></li>
 					</ul>
 				</div>
 			</nav>
